--- a/Instruccions.html
+++ b/Instruccions.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Instruccions</title>
-		<link rel="stylesheet" href="Instruccions.css">
+		<link rel="stylesheet" href="css/Instruccions.css">
 	</head>
 	<body>
 		<p>Per a jugar a aquest joc, el que has de fer és polsar</p>
