--- a/LunarLander.html
+++ b/LunarLander.html
@@ -2,8 +2,8 @@
 
 <html>
 	<head>
-		<link rel="stylesheet" media='screen and (min-width: 650px)' href='css/LunarLander.css'>
-		<link rel="stylesheet" media='screen and (max-width: 649px)' href='css/LunarLanderSmartphone.css'>
+		<link rel="stylesheet" media='screen and (min-width: 650px)' href='LunarLander.css'>
+		<link rel="stylesheet" media='screen and (max-width: 649px)' href='LunarLanderSmartphone.css'>
 		<style>
 			body,html{height:100%;padding:0px;margin:0px}
 			body{font-size:3vw}
